forgot to add 'include header.php' to the files with the new php header

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ Temporary Items
 
 # compiled Python scripts
 __pycache__
+
+# archives of what was on the server before changing a lot of files
+serverArchive
